--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,7 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="gray">#444</color>
+    <color name="lightGray">#9A9A9A</color>
+    <color name="vDarkGray">#242424</color>
 </resources>
