Display Clients Details

--- a/app/src/main/res/layout/item_client_list.xml
+++ b/app/src/main/res/layout/item_client_list.xml
@@ -15,7 +15,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:background="@color/lightGray"
+        android:background="@drawable/touch_feedback"
         android:padding="5dp">
 
         <TextView
