--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,6 +8,7 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="gray">#444</color>
-    <color name="lightGray">#9A9A9A</color>
+    <color name="lightGray">#C3C3C3</color>
     <color name="vDarkGray">#242424</color>
+    <color name="red">#C30000</color>
 </resources>
